examples/errors/errorStart.js
export { start, stop };


const start = function (emitter) {
    throw new Error(`force error during start`);
};

const stop = function (emitter) {

};
